--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "rn-expandable-circle-menu",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "React native expandable circle library",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/gbk94/react-native-expandable-circle-menu.git"
   },
   "keywords": [
     "react",
